Clean up and version update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwindcss-assistant",
-  "version": "1.0.8",
-  "description": "Small package that helps you develop projects with Tailwind CSS",
+  "version": "1.0.9",
+  "description": "Small package that helps you develop projects with Tailwind CSS 🎉",
   "keywords": [
     "Tailwind CSS",
     "Tailwind CSS Helper",
