--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwindcss-assistant",
-  "version": "1.0.10",
-  "description": "Small package that helps you develop projects with Tailwind CSS",
+  "version": "1.0.11",
+  "description": "Get assistance when developing projects with Tailwind CSS 🤖",
   "keywords": [
     "Tailwind CSS",
     "Tailwind CSS Helper",
@@ -9,13 +9,12 @@
   ],
   "author": "Mark Mead",
   "license": "MIT",
-  "main": "dist/assistant.cjs.js",
-  "module": "dist/assistant.esm.js",
-  "unpkg": "dist/assistant.min.js",
+  "module": "dist/FILE.esm.js",
+  "unpkg": "dist/FILE.min.js",
   "scripts": {
     "build": "node scripts/build.js"
   },
   "devDependencies": {
-    "esbuild": "^0.12.22"
+    "esbuild": "^0.16.2"
   }
 }
